--- a/Dataset on Netflix movies and Tv shows (asg#4)(2).ipynb
+++ b/Dataset on Netflix movies and Tv shows (asg#4)(2).ipynb
@@ -13,8 +13,7 @@
     " \n",
     "              Pandeti Naveen Varma (Pande3n) ;\n",
     "              Busireddy sumanth Reddy(Busir1s) ;\n",
-    "              Tirumala kanduri Sri Swetha(Tirum4s).\n"
-    "
+    "              Tirumala kanduri Sri Swetha(Tirum4s).\n",
     " \n",
     " "
    ]
